--- a/app/build.gradle
+++ b/app/build.gradle
@@ -125,6 +125,8 @@ dependencies {
     compile 'com.nineoldandroids:library:2.4.0'
     //http
     compile 'com.squareup.okhttp3:okhttp:3.4.1'
+    compile 'com.lzy.net:okgo:2.1.4'
+    compile 'com.lzy.net:okserver:1.1.3'
     //httpdns
     compile project(':httpdns')
     //email
