added privacy policy; updated to v0.9.5

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -84,6 +84,9 @@
             android:name=".ui.activities.LicenseActivity"
             android:screenOrientation="portrait" />
         <activity
+            android:name=".ui.activities.PrivacyActivity"
+            android:screenOrientation="portrait" />
+        <activity
             android:name=".ui.activities.LoginActivity"
             android:windowSoftInputMode="adjustPan" />
         <activity android:name=".ui.activities.MarketActivity" />
