--- a/app/build.gradle
+++ b/app/build.gradle
@@ -122,6 +122,7 @@ dependencies {
     compile 'com.facebook.fresco:fresco:0.13.0'
     compile 'com.facebook.fresco:animated-gif:0.13.0'
     compile 'com.facebook.fresco:imagepipeline-okhttp3:0.12.0+'
+    compile 'q.rorbin:FastImageSize:1.0.2'
     //    compile 'me.relex:photodraweeview:1.1.0'
     compile 'com.github.PureDark:PhotoDraweeView:2c7b7f65b1'
     //    compile project (':photodraweeview')
