--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,7 @@ android {
         vectorDrawables.useSupportLibrary = true
         renderscriptTargetApi 25
         renderscriptSupportModeEnabled true
+        multiDexEnabled true
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -88,7 +89,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.2.0'
     compile 'com.android.support:cardview-v7:25.2.0'
     compile 'com.android.support:design:25.2.0'
-    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha5'
     compile 'com.android.support:support-compat:25.2.0'
     //umeng analytics
     compile 'com.umeng.analytics:analytics:latest.integration'
@@ -166,4 +166,6 @@ dependencies {
     compile 'me.zhanghai.android.patternlock:library:2.0.4'
     compile 'com.eightbitlab:blurview:1.3.2'
 
+    //mutidex
+    compile 'com.android.support:multidex:+'
 }
