--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,8 +16,8 @@ android {
         resValue "string", "app_name", "H-Viewer"
         minSdkVersion 17
         targetSdkVersion 25
-        versionCode 77
-        versionName "0.9.16"
+        versionCode 78
+        versionName "0.10.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
         renderscriptTargetApi 25
@@ -141,6 +141,13 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.4.1'
     compile 'com.lzy.net:okgo:2.1.4'
     compile 'com.lzy.net:okserver:1.1.3'
+
+    // Stetho core
+    compile 'com.facebook.stetho:stetho:1.4.2'
+    //If you want to add a network helper
+    compile 'com.facebook.stetho:stetho-okhttp3:1.4.2'
+
+
     // httpdns
     compile project(':httpdns')
     // email
