--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,16 +16,13 @@ android {
         resValue "string", "app_name", "H-Viewer"
         minSdkVersion 17
         targetSdkVersion 25
-        versionCode 79
-        versionName "0.10.2"
+        versionCode 80
+        versionName "0.10.3"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
         renderscriptTargetApi 25
         renderscriptSupportModeEnabled true
         multiDexEnabled true
-        ndk{
-            abiFilters 'armeabi', 'armeabi-v7a'
-        }
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -35,11 +32,17 @@ android {
         debug {
             applicationIdSuffix '.debug'
             resValue "string", "app_name", "H-Viewer-debug"
+            ndk{
+                abiFilters 'armeabi', 'armeabi-v7a', 'x86'
+            }
         }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro', 'proguard-fresco.pro'
             zipAlignEnabled true
+            ndk{
+                abiFilters 'armeabi', 'armeabi-v7a'
+            }
         }
     }
     lintOptions {
