--- a/gradle.properties
+++ b/gradle.properties
@@ -11,10 +11,11 @@
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
-#Tue Nov 15 11:33:26 CST 2016
-org.gradle.parallel=true
-org.gradle.jvmargs=-Xmx2048m
-systemProp.http.proxyHost=127.0.0.1
-systemProp.http.proxyPort=1080
-systemProp.https.proxyHost=127.0.0.1
+# org.gradle.parallel=true
+#Wed Mar 29 05:29:41 CST 2017
 systemProp.https.proxyPort=1080
+systemProp.http.proxyHost=localhost
+org.gradle.jvmargs=-Xmx2048m
+systemProp.https.proxyHost=localhost
+org.gradle.parallel=true
+systemProp.http.proxyPort=1080
