--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,15 @@
 apply plugin: 'com.android.application'
 apply plugin: 'me.tatarka.retrolambda'
+apply plugin: 'AndResGuard'
+
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath ('com.tencent.mm:AndResGuard-gradle-plugin:1.2.0') { changing=true }
+    }
+}
 
 ext {
     VERSION_DATE = new Date().format("yy-MM-dd", TimeZone.getTimeZone("UTC"))
@@ -8,24 +18,38 @@ ext {
 
 android {
     signingConfigs {
+        release{
+            Properties properties = new Properties()
+            InputStream inputStream = project.rootProject.file('local.properties').newDataInputStream() ;
+            properties.load( inputStream )
+
+            storeFile file(properties["storeFile"])
+            storePassword properties["storePassword"]
+            keyAlias properties["keyAlias"]
+            keyPassword properties["keyPassword"]
+            v2SigningEnabled = false
+        }
     }
     compileSdkVersion 25
     buildToolsVersion BUILD_TOOLS
+
     defaultConfig {
         applicationId "ml.puredark.hviewer"
         resValue "string", "app_name", "H-Viewer"
         minSdkVersion 17
         targetSdkVersion 25
-        versionCode 82
-        versionName "0.10.5"
+        versionCode 83
+        versionName "0.10.6"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
         renderscriptTargetApi 25
         renderscriptSupportModeEnabled true
         multiDexEnabled true
-        ndk{
+        resConfigs "zh"
+        ndk {
             abiFilters 'armeabi', 'armeabi-v7a'
         }
+
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -35,26 +59,29 @@ android {
         debug {
             applicationIdSuffix '.debug'
             resValue "string", "app_name", "H-Viewer-debug"
-            ndk{
-                abiFilters 'armeabi', 'armeabi-v7a', 'x86'
+            ndk {
+                abiFilters 'armeabi', 'armeabi-v7a'//, 'x86'
             }
+            shrinkResources true
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro', 'proguard-fresco.pro'
+            zipAlignEnabled true
+            signingConfig signingConfigs.release
         }
         release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro', 'proguard-fresco.pro'
+            shrinkResources true
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro', 'proguard-fresco.pro'
             zipAlignEnabled true
+            signingConfig signingConfigs.release
         }
     }
     lintOptions {
         abortOnError false
     }
     productFlavors {
-        wandoujia {}
         coolapk {}
         github {}
-        googleplay {
-            applicationIdSuffix '.googleplay'
-        }
         productFlavors.all { flavor ->
             flavor.manifestPlaceholders = [UMENG_CHANNEL_VALUE: name]
         }
@@ -72,6 +99,27 @@ android {
         exclude 'META-INF/LGPL2.1'
     }
 }
+
+andResGuard {
+    use7zip = true
+    useSign = true
+    keepRoot = false
+    whiteList = [
+            "R.mipmap.ic_launcher",
+            "R.id.*"
+    ]
+    compressFilePattern = [
+            "*.png",
+            "*.jpg",
+            "*.jpeg",
+            "*.gif",
+            "resources.arsc"
+    ]
+    sevenzip {
+        artifact = 'com.tencent.mm:SevenZip:1.2.0'
+    }
+}
+
 
 repositories {
     mavenCentral()
@@ -91,11 +139,11 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     // Google offical
+    // warning due to a known bug, ignored
     compile 'com.android.support:support-v4:25.2.0'
     compile 'com.android.support:appcompat-v7:25.2.0'
     compile 'com.android.support:cardview-v7:25.2.0'
     compile 'com.android.support:design:25.2.0'
-    compile 'com.android.support:support-compat:25.2.0'
     // umeng analytics
     compile 'com.umeng.analytics:analytics:latest.integration'
     // material widget
@@ -112,11 +160,11 @@ dependencies {
     compile 'com.github.leonardarnold:NumberPickerPreference:bea5996cc9'
     compile 'me.majiajie:pager-bottom-tab-strip:1.0.0'
     compile 'com.github.davidpizarro:autolabelui:1.0.1'
-    compile ('com.github.smtchahal:MaterialSpinner:1.1.7'){
+    compile('com.github.smtchahal:MaterialSpinner:1.1.7') {
         exclude group: 'com.nineoldandroids', module: 'library'
         exclude group: 'com.android.support', module: 'appcompat-v7'
     }
-    compile "biz.laenger.android:vpbs:0.0.4"
+    compile 'biz.laenger.android:vpbs:0.0.4'
     // Pull Load More
     compile('com.wuxiaolong.pullloadmorerecyclerview:library:1.1.2') {
         exclude group: 'com.android.support'
@@ -135,21 +183,18 @@ dependencies {
     //    compile 'me.relex:photodraweeview:1.1.0'
     compile 'com.github.PureDark:PhotoDraweeView:2c7b7f65b1'
     //    compile project (':photodraweeview')
-    compile 'com.nineoldandroids:library:2.4.0'
+
     // animation
     compile 'com.daimajia.easing:library:2.0@aar'
     compile 'com.daimajia.androidanimations:library:2.2@aar'
-
     // http
     compile 'com.squareup.okhttp3:okhttp:3.4.1'
     compile 'com.lzy.net:okgo:2.1.4'
     compile 'com.lzy.net:okserver:1.1.3'
-
     // Stetho core
     compile 'com.facebook.stetho:stetho:1.4.2'
     //If you want to add a network helper
     compile 'com.facebook.stetho:stetho-okhttp3:1.4.2'
-
     // httpdns
     compile project(':httpdns')
     // email
@@ -171,16 +216,13 @@ dependencies {
     compile 'net.rdrei.android.dirchooser:library:3.2@aar'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.2.1'
     compile 'net.jcip:jcip-annotations:1.0'
-
     // video player
     compile 'com.github.CarGuo:GSYVideoPlayer:v1.6.1'
-
     // unlock methods, such as pin, fingerprint, etc
     compile 'com.andrognito.pinlockview:pinlockview:2.0.1'
     compile 'com.zwh:RxFingerPrinter:1.0.1'
     compile 'me.zhanghai.android.patternlock:library:2.0.4'
     compile 'com.eightbitlab:blurview:1.3.2'
-
     //mutidex
     compile 'com.android.support:multidex:+'
 }
