--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,13 +42,9 @@ android {
         versionName "0.10.6"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
-        renderscriptTargetApi 25
-        renderscriptSupportModeEnabled true
-        multiDexEnabled true
-        resConfigs "zh"
-        ndk {
-            abiFilters 'armeabi', 'armeabi-v7a'
-        }
+        renderscriptTargetApi 17
+        renderscriptSupportModeEnabled false
+        //multiDexEnabled true
 
     }
     compileOptions {
@@ -60,7 +56,7 @@ android {
             applicationIdSuffix '.debug'
             resValue "string", "app_name", "H-Viewer-debug"
             ndk {
-                abiFilters 'armeabi', 'armeabi-v7a'//, 'x86'
+                abiFilters 'armeabi', 'armeabi-v7a' //, 'x86'
             }
             shrinkResources true
             minifyEnabled true
@@ -74,6 +70,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro', 'proguard-fresco.pro'
             zipAlignEnabled true
             signingConfig signingConfigs.release
+            ndk {
+                abiFilters 'armeabi', 'armeabi-v7a'
+            }
         }
     }
     lintOptions {
@@ -97,6 +96,9 @@ android {
         exclude 'META-INF/license.txt'
         exclude 'META-INF/dependencies.txt'
         exclude 'META-INF/LGPL2.1'
+        exclude 'lib/*/libijk*.so'
+        exclude 'lib/*/libRSSupport.so'
+        exclude 'lib/*/librsjni.so'
     }
 }
 
@@ -217,7 +219,9 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.2.1'
     compile 'net.jcip:jcip-annotations:1.0'
     // video player
-    compile 'com.github.CarGuo:GSYVideoPlayer:v1.6.1'
+    //compile 'com.github.CarGuo:GSYVideoPlayer:v1.6.1'
+    compile 'com.github.PureDark:GSYVideoPlayer:4593cb6d4f'
+
     // unlock methods, such as pin, fingerprint, etc
     compile 'com.andrognito.pinlockview:pinlockview:2.0.1'
     compile 'com.zwh:RxFingerPrinter:1.0.1'
