--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,8 +42,6 @@ android {
         versionName "0.10.6"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
-        renderscriptTargetApi 17
-        renderscriptSupportModeEnabled false
         //multiDexEnabled true
 
     }
@@ -56,7 +54,7 @@ android {
             applicationIdSuffix '.debug'
             resValue "string", "app_name", "H-Viewer-debug"
             ndk {
-                abiFilters 'armeabi', 'armeabi-v7a' //, 'x86'
+                abiFilters 'armeabi', 'armeabi-v7a' , 'x86'
             }
             shrinkResources true
             minifyEnabled true
@@ -220,13 +218,14 @@ dependencies {
     compile 'net.jcip:jcip-annotations:1.0'
     // video player
     //compile 'com.github.CarGuo:GSYVideoPlayer:v1.6.1'
-    compile 'com.github.PureDark:GSYVideoPlayer:4593cb6d4f'
+    compile 'com.github.PureDark:GSYVideoPlayer:ddcf05191e'
 
     // unlock methods, such as pin, fingerprint, etc
     compile 'com.andrognito.pinlockview:pinlockview:2.0.1'
     compile 'com.zwh:RxFingerPrinter:1.0.1'
     compile 'me.zhanghai.android.patternlock:library:2.0.4'
-    compile 'com.eightbitlab:blurview:1.3.2'
+    //compile 'com.eightbitlab:blurview:1.3.2'
+    compile 'com.github.PureDark:BlurView:e26c60d30e'
     //mutidex
     compile 'com.android.support:multidex:+'
 }
