--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,8 +38,8 @@ android {
         resValue "string", "app_name", "H-Viewer"
         minSdkVersion 17
         targetSdkVersion 25
-        versionCode 85
-        versionName "0.11.1"
+        versionCode 86
+        versionName "0.11.2"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
         //multiDexEnabled true
@@ -224,8 +224,8 @@ dependencies {
     compile 'com.andrognito.pinlockview:pinlockview:2.0.1'
     compile 'com.zwh:RxFingerPrinter:1.0.1'
     compile 'me.zhanghai.android.patternlock:library:2.0.4'
-    //compile 'com.eightbitlab:blurview:1.3.2'
-    compile 'com.github.PureDark:BlurView:e26c60d30e'
+    compile 'com.eightbitlab:blurview:1.3.3'
+    //compile 'com.github.PureDark:BlurView:e26c60d30e'
     //mutidex
     compile 'com.android.support:multidex:+'
 }
