--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath ('com.tencent.mm:AndResGuard-gradle-plugin:1.2.0') { changing=true }
+        classpath 'com.tencent.mm:AndResGuard-gradle-plugin:1.2.3'
     }
 }
 
@@ -175,6 +175,7 @@ dependencies {
 
     // butter knife
     compile 'com.jakewharton:butterknife:8.2.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.2.1'
     // image
     compile 'com.facebook.fresco:fresco:0.13.0'
     compile 'com.facebook.fresco:animated-gif:0.13.0'
@@ -214,7 +215,6 @@ dependencies {
     // directory chooser
     compile 'com.gu:option:1.3'
     compile 'net.rdrei.android.dirchooser:library:3.2@aar'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.2.1'
     compile 'net.jcip:jcip-annotations:1.0'
     // video player
     //compile 'com.github.CarGuo:GSYVideoPlayer:v1.6.1'
